Update ScrapService to use configuration for userAgent
Refactored ScrapService to obtain the user-agent from JsoupConfig for flexibility. Updated related methods and classes to return String (with body element and old child elements)instead of Elements. Added JsoupConfig and necessary configuration entries in application.yml.